--- a/index.html
+++ b/index.html
@@ -10,6 +10,74 @@
 </head>
 
 <body>
+    <div class="container">
+        <h1 class="text-center">Pratica con il Grid System</h1>
+        <h2 class="text-center">Esercizio 1</h2>
+        <div class="row">
+            <div class="col-md bg-primary text-white p-3 border border-black border-2">1</div>
+            <div class="col-md bg-primary text-white p-3 border border-black border-2">2</div>
+            <div class="col-md bg-primary text-white p-3 border border-black border-2">3</div>
+        </div>
+        <h2 class="text-center">Esercizio 2</h2>
+        <div class="row">
+            <div class="col-lg-4 bg-warning p-3 border border-black border-2">1</div>
+            <div class="col-lg-4 bg-warning p-3 border border-black border-2">2</div>
+            <div class="col-lg-4 bg-warning p-3 border border-black border-2">3</div>
+        </div>
+        <h2 class="text-center">Esercizio 3</h2>
+        <div class="row">
+            <div class="col-4 bg-success p-3 text-white border border-black border-2">1</div>
+            <div class="col-4 bg-success p-3 text-white border border-black border-2">2</div>
+            <div class="col-4 bg-success p-3 text-white border border-black border-2">3</div>
+        </div>
+        <div class="row">
+            <div class="col-sm-4 bg-success p-3 text-white border border-black border-2">1</div>
+            <div class="col-sm-4 bg-success p-3 text-white border border-black border-2">2</div>
+            <div class="col-sm-4 bg-success p-3 text-white border border-black border-2">3</div>
+        </div>
+        <div class="row">
+            <div class="col-md-4 bg-success p-3 text-white border border-black border-2">1</div>
+            <div class="col-md-4 bg-success p-3 text-white border border-black border-2">2</div>
+            <div class="col-md-4 bg-success p-3 text-white border border-black border-2">3</div>
+        </div>
+        <div class="row">
+            <div class="col-lg-4 bg-success p-3 text-white border border-black border-2">1</div>
+            <div class="col-lg-4 bg-success p-3 text-white border border-black border-2">2</div>
+            <div class="col-lg-4 bg-success p-3 text-white border border-black border-2">3</div>
+        </div>
+        <div class="row">
+            <div class="col-xl-4 bg-success p-3 text-white border border-black border-2">1</div>
+            <div class="col-xl-4 bg-success p-3 text-white border border-black border-2">2</div>
+            <div class="col-xl-4 bg-success p-3 text-white border border-black border-2">3</div>
+        </div>
+        <div class="row">
+            <div class="col-xxl-4 bg-success p-3 text-white border border-black border-2">1</div>
+            <div class="col-xxl-4 bg-success p-3 text-white border border-black border-2">2</div>
+            <div class="col-xxl-4 bg-success p-3 text-white border border-black border-2">3</div>
+        </div>
+        <h2 class="text-center">Esercizio 4</h2>
+        <div class="row">
+            <div class="col-xl-3 bg-danger p-3 text-white border border-black border-2">1</div>
+            <div class="col-xl-6 bg-danger p-3 text-white border border-black border-2">2</div>
+            <div class="col-xl-3 bg-danger p-3 text-white border border-black border-2">3</div>
+        </div>
+        <h2 class="text-center">Esercizio 5</h2>
+        <div class="row">
+            <div class="col-lg-8 bg-info p-3 text-white border border-black border-2">
+                <div class="row">
+                    <div class="col-lg-6 bg-secondary p-3 text-white border border-black border-2">1</div>
+                    <div class="col-lg-6 bg-secondary p-3 text-white border border-black border-2">2</div>
+                </div>
+            </div>
+            <div class="col-lg-4 bg-info p-3 text-white border border-black border-2">2</div>
+        </div>
+        <h2 class="text-center">Esercizio 6</h2>
+        <div class="row">
+            <div class="col-xl-6 bg-black p-3 text-white">1</div>
+            <div class="col-xl-4 offset-xl-2 bg-black p-3 text-white">2</div>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
